fix 第一次安装Capture Visible Content 菜单出现个 第一次安装增加了默认路径
git-svn-id: http://chrome-screen-capture.googlecode.com/svn/branches/add-new-features-and-fix-bug@141 72d34acd-96ab-fc25-247f-fc063804e312

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-#sc_drag_area_protector div {
+#sc_drag_area_protector div{
   border-radius: 0px 0px;
   margin:0;
   max-width:100%;
   min-width: 1px;
+
 }
 
 #sc_drag_area {
@@ -26,17 +27,17 @@
 }
 #sc_drag_area_protector {
   border-radius: 0px 0px;
-  display:block;
+  display: block;
   height:100%;
   left:0;
   top:0;
-  position:fixed;
+  position: fixed;
   width:100%;
   z-index:8500;
   margin: 0;
   max-width:100%;
   min-width: 1px;
-
+  overflow: hidden;
 }
 #sc_drag_size {
   background-color:#444444;
